--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -5,20 +5,32 @@
   border-radius: 2500px;
   border: none;
   background-color: rgb(87, 9, 189);
+  // background: linear-gradient(
+  //   to right,
+  //   rgba(110, 10, 240, 0.493) 0,
+  //   rgba(146, 82, 231, 0.589) 10%,
+  //   rgba(87, 9, 189, 0.623) 20%
+  // );
+  background-position: 0;
   color: #fff;
   font-family: $font-display;
   opacity: 1;
   visibility: visible;
   z-index: 2;
   position: relative;
-  // margin-bottom: 1rem;
-  //width: fit-content;
-  //transition: all 1s;
-  //transform: scale(0);
+  // animation: shine 5s infinite linear;
+  animation-fill-mode: forwards;
+
   transition: width 2s;
   &-right {
     border: none;
     transform: translateY(-1px);
+    // background: linear-gradient(
+    //   to right,
+    //   #14b69361 0%,
+    //   #23927a8c 10%,
+    //   #0a6955 20%
+    // );
     background-color: #0a6955;
     &__icon {
       width: 1.5rem;
@@ -52,44 +64,6 @@
     }
   }
 }
-// .btn-open {
-//   display: block;
-//   margin-top: 3rem;
-//   padding: 1.5rem 1.5rem;
-//   border-radius: 2500px;
-//   border: none;
-//   background-color: rgb(87, 9, 189);
-//   color: #fff;
-//   font-family: $font-display;
-//   opacity: 1;
-//   visibility: visible;
-//   //width: fit-content;
-//   transition: all 1s;
-//   transform: scale(-1);
-
-//   &__text {
-//     display: none;
-//   }
-//   //transition: width 2s;
-//   &__icon {
-//     width: 2rem;
-//     height: 2rem;
-//     fill: currentColor;
-//     display: none;
-//     transform: rotate(180deg);
-//     &--click {
-//       display: block;
-//     }
-//   }
-// }
-
-/* Vertical */
-
-// .vertical .progress-bar {
-//   float: left;
-//   height: 20rem;
-//   margin-right: 25px;
-// }
 
 .track {
   position: relative;
@@ -102,13 +76,14 @@
   position: absolute;
   bottom: 0;
   background-color: rgb(42, 3, 92);
-  //height: 100%;
+  height: 0;
   width: 0.7rem;
   color: #fff;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0 0 8px rgb(117, 103, 170);
   // position: relative;
+  animation: show-bar-one 0.8s;
   z-index: 3;
   span {
     position: absolute;
@@ -122,12 +97,6 @@
     background-color: rgb(87, 9, 189);
   }
 }
-
-// .rounded .progress-track,
-// .rounded .progress-fill {
-//   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-//   border-radius: 3px;
-// }
 
 ////////////////////////////////////////////
 //healper
@@ -158,5 +127,45 @@
   }
   &-left {
     right: 3rem;
+  }
+}
+@-webkit-keyframes show-bar-one {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+  // 100% {
+  //   height: 69.6%;
+  // }
+}
+
+.btn-shine {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 12px 48px;
+  color: #ffffff;
+  background: linear-gradient(to right, #4d4d4d 0, white 10%, #4d4d4d 20%);
+  background-position: 0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 3s infinite linear;
+  animation-fill-mode: forwards;
+  -webkit-text-size-adjust: none;
+  font-weight: 600;
+  font-size: 16px;
+  text-decoration: none;
+  white-space: nowrap;
+}
+@keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 180px;
+  }
+  100% {
+    background-position: 180px;
   }
 }
