--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,7 +15,7 @@
   grid-template-columns: repeat(2, minmax(min-content, 1fr)) minmax(4rem, 1fr);
 
   // grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: min-content repeat(2, min-content) 5rem min-content min-content;
+  grid-template-rows: min-content repeat(2, min-content) 5rem min-content 1fr;
   @media only screen and (max-width: $bp-sm-medium) {
     grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
   }
@@ -33,6 +33,7 @@
       grid-column: 1/3;
       padding-left: 4rem;
       z-index: 1;
+      transition: all 0.5s;
     }
     &--title {
       grid-row: 5/6;
@@ -47,6 +48,8 @@
 
       img {
         height: 50vh;
+        animation: jump 5s infinite;
+
         @media only screen and (max-width: $bp-sm-medium) {
           height: 63vw;
         }
@@ -130,7 +133,7 @@
   grid-row-gap: 3rem;
 
   grid-template-columns: minmax(4rem, 1fr) repeat(2, minmax(min-content, 1fr));
-  grid-template-rows: min-content repeat(2, min-content) 5rem min-content min-content;
+  grid-template-rows: min-content repeat(2, min-content) 5rem min-content 1fr;
   @media only screen and (max-width: $bp-sm-medium) {
     grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
   }
@@ -172,13 +175,14 @@
       }
 
       img {
-        width: 100%;
+        width: 80%;
         // height: 50vh;
         z-index: 1;
+        animation: jump 5s infinite;
       }
     }
     &--chart {
-      grid-row: 6/7;
+      grid-row: 6/8;
       grid-column: 2/3;
       z-index: 1;
       @media only screen and (max-width: $bp-sm-medium) {
@@ -245,4 +249,16 @@
 .tracks {
   width: 34rem;
   height: 100%;
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(-10%);
+  }
+  50% {
+    transform: translateY(10%);
+  }
+  100% {
+    transform: translateY(-10%);
+  }
 }
